--- a/index.html
+++ b/index.html
@@ -60,7 +60,35 @@
         </div>
     </section>
     <section id="section3">
-        <h1>Section Three</h1>
+      <div class="container">
+        <h1 class="title">rahul gallery</h1>
+        <div class="sub-panels">
+          <div class="sub-panel">
+            <div class="image-container">
+              <img src="images/fat-rahul.jpg" alt="Image 1">
+            </div>
+            <div class="text-container">
+              <p>rahul is fat lol</p>
+            </div>
+          </div>
+          <div class="sub-panel">
+            <div class="image-container">
+              <img src="images/rahul-fat-lol.png" alt="Image 2">
+            </div>
+            <div class="text-container">
+              <p>lol</p>
+            </div>
+          </div>
+          <div class="sub-panel">
+            <div class="image-container">
+              <img src="images/rahul-is-fat.png" alt="Image 3">
+            </div>
+            <div class="text-container">
+              <p>lol</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section id="section4">
         <h1>Section Four</h1>
